kube/ordering-service-deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: ordering-service
  name: ordering-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ordering-service
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: ordering-service
    spec:
      containers:
      - env:
        - name: SPRING_KAFKA_BOOTSTRAP_SERVERS
          value: kafka:9092
      - image: mohzaar/ms-kafka-order:latest
        name: ordering-service
        readinessProbe:
          httpGet:
            path: /order
            port: 8080
        ports:
        - containerPort: 8080
        resources: {}
        imagePullPolicy: Always
      restartPolicy: Always
status: {}
