kube/shipping-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: shipping-service
  name: shipping-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: shipping-service
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: shipping-service
    spec:
      containers:
        - image: shipping-service
          name: shipping-service
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
