kube/kafka-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: kafka-cluster
  name: kafka-cluster
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kafka-cluster
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: kafka-cluster
    spec:
      containers:
      - env:
        - name: KAFKA_ADVERTISED_HOST_NAME
          value: "kafka-cluster"
        - name: KAFKA_CREATE_TOPICS
          value: "order:1:1"
        - name: KAFKA_ZOOKEEPER_CONNECT
          value: "zookeeper:2181"
        image: wurstmeister/kafka:2.12-2.5.0
        name: kafka
        ports:
          - containerPort: 9092
        resources: {}
        imagePullPolicy: Always
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-cluster
  labels:
    io.kompose.service: kafka-cluster
spec:
  selector:
    io.kompose.service: kafka-cluster
  ports:
    - port: 9092
