kube/ordering-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: ordering-service
  name: ordering-service
spec:
  type: LoadBalancer
  ports:
  - name: "81"
    port: 81
    targetPort: 8080
  selector:
    io.kompose.service: ordering-service
status:
  loadBalancer: {}
