kube/shipping-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: shipping-service
  name: shipping-service
spec:
  ports:
    - name: "81"
      port: 81
      targetPort: 8080
  selector:
    io.kompose.service: shipping-service
status:
  loadBalancer: {}
