kube/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    networking.gke.io/managed-certificates: cert-mohzaar
spec:
  backend:
    serviceName: ordering-service
    servicePort: 81
  rules:
  - host: api.mohzaar.fr
  - http:
      paths:
      - path: /order
        backend:
          serviceName: ordering-service
          servicePort: 81
      - path: /shipping
        backend:
          serviceName: shipping-service
          servicePort: 82
